FIX: [10.2 RC] Add spacing to elements on the group editor page [t34033]
git-svn-id: http://svn.resourcespace.com/svn/rs/releases/10.2_RC@22271 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -99,6 +99,7 @@ button, input[type=submit], input[type=button], .RecordPanel .RecordDownloadSpac
 
 button, input[type=submit], input[type=button], .RecordPanel .RecordDownloadSpace .DownloadDBlend a {
     text-align: center;
+    max-width: 500px;
 }
 
 #ResourceDownloadOptions td.DownloadFileName.AlternativeFile a {
@@ -556,6 +557,7 @@ a:hover .fa,.fa:hover {text-decoration:none !important;} /* Never underline a Fo
 .FormWide .Question .tickset .stdwidth{width: 99%}
 .FormWide .Question .FormHelp {margin: 0 10px 4px 20%;}
 .FormWide .Question .FormHelp .FormHelpInner {width: 87.2%; margin-left: 10px;}
+.FormWide .Question .label-spacer {margin-left: calc(20% + 10px);}
 
 .Question .Fixed {    width: 300px;float: left;margin-top: 0.4em;font-weight: bold;} 
 .FormError{font-weight: bold;font-size: 1.1em;margin: 0 0 10px 190px;padding: 10px 0 0;}
